# omamori

./: .editorconfig  .gitattributes  .gitignore  ACCEPTANCE_TEST.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  PLAN.md  README.md  RELEASE.md  SECURITY.md  config.default.toml  demo.tape  rust-toolchain.toml
.claude/plans/: 2026-03-22-v060-recursive-unwrap-stack.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  evaluation-feedback.yml
.github/workflows/: ci.yml  fuzz.yml
benches/: audit_append.rs  hook_check.rs  unwrap_parse.rs
docs/: CONTRACT.md  FAQ.md  defense-boundary.json  defense-boundary.schema.json  evaluation-kit.md  reference-architecture.md
docs/adr/: 0001-atomic-file-canonical-helper.md  0002-no-cwd-fallback-for-global-settings-paths.md  0003-wrapper-exit-code-contract-and-recovery-hint.md  0004-hook-exec-path-provenance-policy.md  0005-no-tmp-exception-for-blocked-destination-prefixes.md  0006-process-provenance-excluded-from-entry-hash.md
docs/dogfood/: 2026-04-23-codex-notion-mcp-reauth.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_check_command.rs  fuzz_hook_input.rs  fuzz_unwrap.rs
investigation/: v060-shell-words-poc-results.md
proptest-regressions/: property_tests.txt
scripts/: approved-deps.txt  check-action-pins.sh  check-boundary-matrix.sh  check-crate-contents.sh  check-invariants.sh  check-lockfile-regressions.sh  pre-pr-check.sh  pre-release-check.sh  test-isolation-canary.sh  verify-claims.sh
src/: actions.rs  atomic_file.rs  audit.rs  break_glass.rs  config.rs  context.rs  detector.rs  installer.rs  integrity.rs  lib.rs  main.rs  property_tests.rs  rules.rs  test_support.rs  unwrap.rs  util.rs
src/audit/: chain.rs  mod.rs  provenance.rs  report.rs  retention.rs  secret.rs  verify.rs
src/cli/: audit_cmd.rs  break_glass_cmd.rs  checks_display.rs  config_cmd.rs  doctor.rs  explain.rs  install.rs  mod.rs  policy_test.rs  report.rs  setup.rs  status.rs
src/engine/: exec.rs  guard.rs  hook.rs  mod.rs  shim.rs
tests/: cli.rs  hook_integration.rs  integration.rs  poc_integrity.rs
