[package]
name = "omamori"
version = "0.6.1"
edition = "2024"
description = "AI Agent's Omamori — protect your system from dangerous commands executed via AI CLI tools"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yottayoshida/omamori"
homepage = "https://github.com/yottayoshida/omamori"
keywords = ["ai", "agent", "safety", "claude-code", "cli"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Iori Yoshida <yotta@users.noreply.github.com>"]
readme = "README.md"

[dependencies]
libc = "0.2.183"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting"] }
toml = "0.8"
trash = "5.2"
shell-words = "1.1"
