[package]
name = "omamori"
version = "0.10.0"
edition = "2024"
rust-version = "1.92"
description = "AI Agent's Omamori — protect your system from dangerous commands executed via AI CLI tools"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yottayoshida/omamori"
homepage = "https://github.com/yottayoshida/omamori"
keywords = ["ai", "agent", "safety", "claude-code", "cli"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Iori Yoshida <yotta@users.noreply.github.com>"]
readme = "README.md"

# v0.9.3+ supply-chain policy (SECURITY.md invariants #4).
#
# `include` is a deny-by-default allowlist: only these paths ship in the
# crate tarball uploaded to crates.io. Anything not listed — including
# everything under `.claude/`, `investigation/`, `.github/`, `scripts/`,
# `rust-toolchain.toml`, `CONTRIBUTING.md`, `demo.svg`, etc. — is
# structurally excluded, regardless of whether it happens to be tracked
# by git.
#
# Note on `exclude`: cargo ignores `exclude` whenever `include` is also
# specified ("both package.include and package.exclude are specified;
# the exclude list will be ignored"), so `include` is the single source
# of truth here. `crate-contents-guard` in ci.yml is the defense-in-depth
# layer that catches accidental widening of `include`.
include = [
    "src/**/*.rs",
    "tests/**/*.rs",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "CHANGELOG.md",
    "SECURITY.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "config.default.toml",
]

[dependencies]
libc = "0.2.186"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing"] }
toml = "1.1"
toml_edit = "0.25"
trash = "5.2"
shell-words = "1.1"

[dev-dependencies]
serial_test = "3"
proptest = "1.11"
criterion = "0.8.2"

# Benchmarks live under `benches/` and are excluded from the crate tarball
# via the `include` allowlist above (Invariant #4 / SECURITY.md). They run
# locally with `cargo bench` and in CI as a compile-only check
# (`cargo bench --no-run`). Regression budget for v0.9.8 is observe-only;
# relative-comparison gating shifts in v0.9.9+.
#
# `[lib] bench = false` suppresses the implicit dummy bench harness Rust
# would otherwise attach to the library crate, which would conflict with
# `harness = false` on the explicit benches below (and emits warnings on
# stable when no `#[bench]` items exist).

[lib]
bench = false

[[bench]]
name = "unwrap_parse"
harness = false

[[bench]]
name = "hook_check"
harness = false

[[bench]]
name = "audit_append"
harness = false
